webook/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql
spec:
  # NodePort
  type: NodePort
  selector:
    app: webook-mysql
  ports:
    - protocol: TCP
      name: mysql
      # 你访问的端口
      port: 3309
      targetPort: 3306
      # nodePort 范围 30000-32767
      nodePort: 30000
