webook/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      # k8s内部端口
      port: 10379
      # redis 默认端口
      targetPort: 6379
      # k8s外部可访问端口
      nodePort: 30003
  type: NodePort
