webook/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
spec:
  # 要用 Nginx
  ingressClassName: nginx
  rules:
    # 当 host 是 live.webook.com 的时候，命中我这条
    - host: live.webook.com
      http:
        paths:
          # 当请求路径前缀是 / 时，将请求转发至webook服务上，端口是80
          - path: /
            backend:
              service:
                name: webook
                port:
                  number: 80
            pathType: Prefix
